# 2025_idbot

./: .dockerignore  .env  .gitignore  CLAUDE.md  Dockerfile  RAG_qa.xlsx  README.md  docker-compose.yml  main.py  pyproject.toml  run_batch_trace.py  sutructure.md
app/api/: admin_router.py
app/core/: embedding_service.py  llm_service.py  ritriever_manager.py  tracing_service.py
app/models/: query.py
app/pipeline/: pipeline.py
app/resources/db_data/: cdci_db.csv
app/retrievers/: base_retriever.py  bioterror_A.py  bioterror_B.py  common.py  etc.py  healthcare.py  respiratory.py  sexual_blood.py  tb.py  tick.py  vaccine.py  water_food.py  zoonotic.py
app/services/: aggregate_service.py  aggregator_service.py  grade_service.py  input_service.py  intent_service.py  logging_service.py  normalization_service.py  normalization_service.py.py  retriever_loader.py  routing_service.py  source_service.py  summarizer_service.py
app/services/retrievers/: base_retriever.py  common.py
docs/: 2024_proj.md  2025_frontend.md  2025_proj.md  deployment_guide.md  doc_preprocessing.md  evaluation.md  portfolio.md  portfolio_v2.md  v2_evaluation.md
evaluation/: rag_comparison.ipynb
evaluation/report/: rag_evaluation_report.md
evaluation/results/: all_answers.xlsx  all_answers_ragas.xlsx  eval_absolute.xlsx  eval_absolute_partial.xlsx  eval_pairwise.xlsx  eval_pairwise_partial.xlsx  eval_ragas_s1.xlsx  eval_ragas_s2.xlsx  eval_ragas_s3.xlsx
infra/mongodb/: mongo_client.py  query_log_repository.py
resources/metadata/: disease_metadata.csv
resources/vectorstore/bioterror/: index.faiss
resources/vectorstore/bioterror_A/: index.faiss  index.pkl
resources/vectorstore/bioterror_B/: index.pkl
resources/vectorstore/common/: faiss_index.pkl  index.pkl
resources/vectorstore/etc/: index.faiss  index.pkl
resources/vectorstore/healthcare/: index.faiss  index.pkl
resources/vectorstore/respiratory/: index.faiss  index.pkl
resources/vectorstore/sexual_blood/: index.faiss  index.pkl
resources/vectorstore/tb/: index.pkl
resources/vectorstore/tick/: index.faiss  index.pkl
resources/vectorstore/vaccine/: index.faiss  index.pkl
resources/vectorstore/water_food/: index.pkl
resources/vectorstore/zoonotic/: index.pkl
web/: router.py
web/static/: popup.html  script.js  style.css
web/templates/: admin.html  index.html
