[project]
name = "busan_cidc_2025"
version = "0.1.1"
description = "to offer chatbot service"
authors = [
    {name = "nudge5",email = "apollon3110@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.128.1,<0.129.0)",
    "langchain (>=1.2.8,<2.0.0)",
    "mongo (>=0.2.0,<0.3.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-openai (>=1.1.7,<2.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "langchain-core (>=1.2.9,<2.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "pandas (>=3.0.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
