[project]
name = "busan_cidc_2025"
version = "0.1.1"
description = "to offer chatbot service"
authors = [
    {name = "nudge5",email = "apollon3110@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi (>=0.128.1,<0.129.0)",
    "langchain (>=0.3,<1.0)",
    "mongo (>=0.2.0,<0.3.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-community (>=0.3,<1.0)",
    "langchain-openai (>=0.3,<1.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "langchain-ollama (>=0.3,<1.0)",
    "langchain-core (>=0.3,<1.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "pandas (>=2.2,<3)",
    "faiss-cpu (>=1.13.2,<2.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "langfuse (>=2.0.0,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "numpy (>=2.1,<2.3)",
    "langchain-text-splitters (>=0.3,<1.0)",
    "ragas (>=0.4.3,<0.5.0)",
    "dataset (>=1.6.2,<2.0.0)",
    "datasets (>=4.8.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
